# pretrain_healthcheck

./: .gitignore  .gitmodules  MUXI_NODE_LOSS_REPRO.md  README.md  pyproject.toml
pretrain_healthcheck/: __init__.py  analyze.py  cli.py  common.py  static_checks.py  topology_checks.py  torch_checks.py  training_topology.py
scripts/ascend/: export_same_node_clone_yaml.sh  print_vcctl_node_map.sh  probe_comm_path.sh  probe_pod_capabilities.sh  run_single_node_dynamic_stage.sh  run_single_node_full_healthcheck.sh  run_single_node_full_healthcheck_with_sync.sh  run_vcctl_comm_probe.sh  run_vcctl_hccl_multi_node_collective_sweep.sh  run_vcctl_healthcheck.sh  (+5 more)
tests/: test_collective_bandwidth_buffers.py  test_driver_python_resolution.py  test_dynamic_compact_policy.py  test_dynamic_compare_case_policy.py  test_dynamic_frame_protocol.py  test_static_ecc_policy.py  test_steady_state_timing.py  test_training_topology.py  test_vcctl_fixed_group_diagnosis.py  test_vcctl_hccl_multi_node_collective_sweep.py  test_vcctl_hccl_single_node_allreduce.py  test_vcctl_mccl_multi_node_collective_sweep.py  test_vcctl_multi_node_batch.py  test_vcctl_node_loss_repro.py
tools/: dynamic_compact.py  dynamic_compare.py  dynamic_frame.py  export_megatron_training_topology.py  generate_same_node_clone_yaml.py  static_compare.py  tcp_bandwidth_probe.py  vcctl_fixed_group_diagnosis.py  vcctl_hccl_multi_node_collective_sweep.py  vcctl_hccl_single_node_allreduce.py  vcctl_healthcheck_driver.py  vcctl_mccl_multi_node_collective_sweep.py  vcctl_multi_node_batch.py  vcctl_node_loss_repro.py
(+27 files in other folders)
