[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pretrain-healthcheck"
version = "0.1.0"
description = "Pretraining cluster healthcheck tools"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["pretrain_healthcheck*"]
